--- a/app/src/main/res/layout/dialog_edit_menu.xml
+++ b/app/src/main/res/layout/dialog_edit_menu.xml
@@ -33,6 +33,11 @@
             android:layout_height="wrap_content" />
 
         <EditText
+            android:maxLines="1"
+            android:ems="10"
+            android:id="@+id/ed_name"
+            android:imeOptions="actionNext"
+            android:hint="@string/menu_name"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="16dp"
@@ -42,6 +47,12 @@
             android:layout_height="wrap_content" />
 
         <EditText
+            android:maxLines="1"
+            android:ems="10"
+            android:inputType="number"
+            android:id="@+id/ed_price"
+            android:hint="@string/menu_price"
+            android:imeOptions="actionNext"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
@@ -51,6 +62,11 @@
             android:layout_height="wrap_content" />
 
         <EditText
+            android:maxLines="1"
+            android:ems="10"
+            android:id="@+id/ed_des"
+            android:hint="@string/menu_des"
+            android:imeOptions="actionDone"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="8dp"
@@ -66,6 +82,7 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/btn_cancel"
                 android:background="@color/mess2"
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp"
@@ -78,6 +95,7 @@
                 android:layout_height="wrap_content" />
 
             <TextView
+                android:id="@+id/btn_edit"
                 android:background="@color/mess1"
                 android:paddingTop="8dp"
                 android:paddingBottom="8dp"
