--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -27,7 +27,7 @@
     <color name="transBlack">#73000000</color>
     <color name="transWhite">#99FFFFFF</color>
     <color name="freeship">#F4F9FF</color>
-    <color name="backgroundColor">#E8E8E0</color>
+    <color name="backgroundColor">#FFFFFF</color>
     <color name="backgroundColorPress">#DBDBD3</color>
     <color name="mess1">#4D858484</color>
     <color name="mess2">#33979797</color>
