--- a/app/src/main/res/layout/view_enter_user_profile.xml
+++ b/app/src/main/res/layout/view_enter_user_profile.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v4.widget.NestedScrollView
     android:background="@color/white"
-    android:weightSum="1"
-    android:layout_gravity="center"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <LinearLayout
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <LinearLayout
         android:id="@+id/v_title"
-        android:layout_weight="0.3"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
@@ -28,7 +32,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:layout_weight="0.5"
+        android:layout_marginTop="24dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -70,7 +74,7 @@
 
         <LinearLayout
             android:id="@+id/v_email"
-            android:visibility="gone"
+            android:visibility="visible"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -100,7 +104,6 @@
                     android:layout_weight="0.7"
                     android:textSize="14sp"
                     android:id="@+id/ed_email"
-                    android:text="@string/username"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content" />
             </LinearLayout>
@@ -204,62 +207,157 @@
 
         </LinearLayout>
 
-        <TextView
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="8dp"
-            android:textColor="@color/black"
-            android:textSize="14sp"
-            android:paddingBottom="8dp"
-            android:paddingTop="8dp"
-            android:paddingLeft="10dp"
-            android:background="@color/grey"
-            android:text="@string/numberphone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
         <LinearLayout
-            android:layout_margin="8dp"
+            android:id="@+id/v_partner"
+            android:visibility="gone"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_marginRight="24dp"
-                android:text="@string/phone"
-                android:textSize="14sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+            <View
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="0.5dp"
+                android:background="@color/grey"/>
 
-            <RelativeLayout
-                android:layout_marginLeft="24dp"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:weightSum="1"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
+                <TextView
+                    android:layout_weight="0.3"
+                    android:text="@string/cmnd"
+                    android:textSize="14sp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content" />
+
                 <EditText
-                    android:maxLines="1"
-                    android:background="@drawable/bg_ed_register"
-                    android:fontFamily="sans-serif"
-                    android:textColor="@color/black"
-                    android:inputType="number"
-                    android:id="@+id/ed_phone"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dp" />
+                    android:layout_weight="0.7"
+                    android:textSize="14sp"
+                    android:id="@+id/ed_cmnd"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
 
-                <ImageButton
-                    android:id="@+id/btn_error"
-                    android:layout_width="18dp"
-                    android:layout_height="18dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="16dp"
-                    android:background="@color/transparent"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/ic_error_red_24dp" />
-            </RelativeLayout>
+            <TextView
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:textColor="@color/black"
+                android:textSize="14sp"
+                android:paddingBottom="8dp"
+                android:paddingTop="8dp"
+                android:paddingLeft="10dp"
+                android:background="@color/grey"
+                android:text="@string/bank_account"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
-        </LinearLayout>
+            <LinearLayout
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:weightSum="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_weight="0.3"
+                    android:text="@string/stk"
+                    android:textSize="14sp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content" />
+
+                <EditText
+                    android:layout_weight="0.7"
+                    android:textSize="14sp"
+                    android:id="@+id/ed_accountnum"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:weightSum="1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:layout_weight="0.3"
+                    android:text="@string/bank"
+                    android:textSize="14sp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content" />
+
+                <EditText
+                    android:layout_weight="0.7"
+                    android:textSize="14sp"
+                    android:id="@+id/ed_bank"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+
+    </LinearLayout>
+    </LinearLayout>
+
+    <TextView
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="8dp"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp"
+        android:paddingLeft="10dp"
+        android:background="@color/grey"
+        android:text="@string/numberphone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <LinearLayout
+        android:layout_margin="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:layout_marginRight="24dp"
+            android:text="@string/phone"
+            android:textSize="14sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <RelativeLayout
+            android:layout_marginLeft="24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <EditText
+                android:maxLines="1"
+                android:background="@drawable/bg_ed_register"
+                android:fontFamily="sans-serif"
+                android:textColor="@color/black"
+                android:inputType="number"
+                android:id="@+id/ed_phone"
+                android:layout_width="match_parent"
+                android:layout_height="40dp" />
+
+            <ImageButton
+                android:id="@+id/btn_error"
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:layout_marginRight="16dp"
+                android:background="@color/transparent"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_error_red_24dp" />
+        </RelativeLayout>
     </LinearLayout>
 
     <Button
+        android:layout_marginTop="24dp"
         android:paddingLeft="50dp"
         android:paddingRight="50dp"
         android:layout_gravity="bottom|center_horizontal"
@@ -273,5 +371,5 @@
         android:textAllCaps="true"
         android:textColor="@color/white"
         android:textSize="14sp" />
-
-</LinearLayout>
+    </LinearLayout>
+</android.support.v4.widget.NestedScrollView>
