--- a/app/src/main/res/layout/activity_imagedetail_review.xml
+++ b/app/src/main/res/layout/activity_imagedetail_review.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
+    android:background="@color/white"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -13,6 +14,7 @@
         android:background="?attr/colorPrimary">
 
         <LinearLayout
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -25,7 +27,8 @@
                 android:layout_height="wrap_content" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:orientation="vertical">
 
@@ -47,6 +50,15 @@
                     android:text="19 images"
                     android:textSize="14sp" />
             </LinearLayout>
+
+            <ImageView
+                android:visibility="gone"
+                android:id="@+id/btn_add"
+                android:layout_marginRight="16dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_add_white_24dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
