--- a/app/src/main/res/layout/activity_imagedetail_review.xml
+++ b/app/src/main/res/layout/activity_imagedetail_review.xml
@@ -44,6 +44,7 @@
                     android:visibility="visible" />
 
                 <TextView
+                    android:textColor="@color/black"
                     android:id="@+id/tv_countImg"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
