--- a/app/src/main/res/layout/dialog_change_avatar.xml
+++ b/app/src/main/res/layout/dialog_change_avatar.xml
@@ -1,52 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    android:background="@color/white"
-    android:padding="8dp"
+<android.support.v7.widget.CardView
+    app:cardCornerRadius="2dp"
+    android:foreground="?attr/selectableItemBackground"
+    app:cardElevation="4dp"
     android:layout_gravity="center"
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="280dp"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <TextView
-        android:layout_marginBottom="16dp"
+    <LinearLayout
+        android:background="@color/white"
+        android:padding="24dp"
         android:layout_gravity="center"
-        android:textSize="20sp"
-        android:textColor="@color/black"
-        android:fontFamily="sans-serif-medium"
-        android:text="@string/change_avatar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-    <TextView
-        android:id="@+id/btn_takePho"
-        android:drawablePadding="8dp"
-        android:drawableLeft="@drawable/ic_camera_alt_black_24dp"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:text="@string/take_photo"
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/btn_choosePho"
-        android:drawablePadding="8dp"
-        android:drawableLeft="@drawable/ic_photo_library_black_24dp"
-        android:layout_marginTop="16dp"
-        android:textColor="@color/black"
-        android:textSize="16sp"
-        android:text="@string/choose_photo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:layout_marginBottom="16dp"
+            android:layout_gravity="center"
+            android:textSize="20sp"
+            android:textColor="@color/black"
+            android:fontFamily="sans-serif-medium"
+            android:text="@string/change_avatar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-    <TextView
-        android:id="@+id/btn_cancel"
-        android:textSize="16sp"
-        android:layout_gravity="right"
-        android:layout_marginTop="16dp"
-        android:textColor="@color/colorAccent"
-        android:text="@string/cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/btn_takePho"
+            android:drawablePadding="8dp"
+            android:drawableLeft="@drawable/ic_camera_alt_black_24dp"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:text="@string/take_photo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/btn_choosePho"
+            android:drawablePadding="8dp"
+            android:drawableLeft="@drawable/ic_photo_library_black_24dp"
+            android:layout_marginTop="16dp"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            android:text="@string/choose_photo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/btn_cancel"
+            android:textSize="16sp"
+            android:layout_gravity="right"
+            android:layout_marginTop="16dp"
+            android:textColor="@color/colorAccent"
+            android:text="@string/cancel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+</android.support.v7.widget.CardView>
