--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,15 +2,35 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="150dp"
-    android:gravity="center"
-    android:background="@drawable/bg_nv_header">
+    android:layout_height="200dp"
+    android:background="@drawable/bg_header">
 
     <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_gravity="center|center_vertical"
+        android:id="@+id/im_avatar"
         android:src="@drawable/ic_person"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginBottom="15dp"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginTop="20dp"/>
 
+    <TextView
+        android:id="@+id/tv_name"
+        android:fontFamily="sans-serif-medium"
+        android:layout_marginTop="16dp"
+        android:layout_gravity="bottom|center_horizontal"
+        android:textColor="@color/white"
+        android:text="Le Thi Thao Nhi"
+        android:textSize="16sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:layout_marginTop="4dp"
+        android:layout_gravity="center"
+        android:id="@+id/tv_owner"
+        android:text="Owner: Koi The - TP HCM"
+        android:fontFamily="sans-serif-medium"
+        android:textColor="@color/white"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
