account setting partner

--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -11,7 +11,9 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:layout_margin="8dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginLeft="16dp"
             android:src="@drawable/logoutpart"
             android:layout_width="32dp"
             android:layout_height="32dp" />
