--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         android:layout_marginTop="10dp"
         app:layout_constraintHeight_percent="0.08">
         <ImageView
-            android:id="@+id/btn_hide_keyboard"
+            android:id="@+id/btn_close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_back_black"
