--- a/app/src/main/res/drawable/bg_square_red.xml
+++ b/app/src/main/res/drawable/bg_square_red.xml
@@ -7,7 +7,7 @@
         android:radius="5dp"/>
 
     <solid
-        android:color="@color/defaultColor"/>
+        android:color="@color/red"/>
 
     <size
         android:width="24dp"
