account setting partner

--- a/app/src/main/res/layout/item_history_cus.xml
+++ b/app/src/main/res/layout/item_history_cus.xml
@@ -59,6 +59,8 @@
         </LinearLayout>
 
         <TextView
+            android:maxLines="1"
+            android:ellipsize="end"
             android:id="@+id/tv_status"
             android:layout_gravity="center"
             android:gravity="center"
