--- a/app/src/main/res/layout/item_order_part.xml
+++ b/app/src/main/res/layout/item_order_part.xml
@@ -1,44 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
+    android:id="@+id/view_container"
+    android:orientation="vertical"
     android:layout_marginTop="8dp"
     android:layout_marginBottom="8dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <ImageView
+        android:visibility="gone"
+        android:id="@+id/img_res"
+        android:layout_width="56dp"
+        android:layout_height="56dp" />
+
+    <TextView
+        android:id="@+id/tv_date"
+        android:text="11/3/2019"
+        android:paddingTop="5dp"
+        android:paddingLeft="8dp"
+        android:paddingBottom="5dp"
+        android:textColor="@color/black"
+        android:textSize="14sp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <FrameLayout
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <LinearLayout
         android:layout_marginLeft="20dp"
         android:background="@drawable/border_line_black"
         android:layout_gravity="center"
         android:orientation="vertical"
-        android:layout_width="350dp"
+        android:layout_width="300dp"
         android:layout_height="100dp">
 
         <TextView
+            android:id="@+id/tv_name"
+            android:layout_marginTop="8dp"
+            android:text="sgdhjgd dhjgd hjagdha djhgdjajhagd"
+            android:layout_marginLeft="60dp"
             android:textSize="14sp"
             android:textColor="@color/black"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:gravity="center"
-        android:layout_gravity="start"
-        android:background="@drawable/bg_circle_green"
-        android:layout_width="100dp"
-        android:layout_height="100dp">
-
         <TextView
-            android:layout_gravity="center|center_horizontal"
-            android:fontFamily="sans-serif-medium"
-            android:textSize="16sp"
-            android:textColor="@color/white"
-            android:text="Complete"
+            android:layout_marginLeft="60dp"
+            android:id="@+id/tv_address"
+            android:layout_marginTop="4dp"
+            android:text="skajkhd djkaskhd jahs jkash djashd jhasjdhasjdasjkd hs"
+            android:textSize="14sp"
+            android:maxLines="1"
+            android:ellipsize="end"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
+        <LinearLayout
+            android:layout_marginLeft="60dp"
+            android:layout_marginTop="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/tv_count"
+                android:text="10 items - "
+                android:textSize="12sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/tv_total"
+                android:text="85000VND"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
     </LinearLayout>
 
-</FrameLayout>
+    <TextView
+        android:maxLines="1"
+        android:ellipsize="end"
+        android:gravity="center"
+        android:layout_gravity="start"
+        android:background="@drawable/bg_circle_yellow"
+        android:id="@+id/tv_status"
+        android:fontFamily="sans-serif-medium"
+        android:textSize="16sp"
+        android:textColor="@color/white"
+        android:text="Complete"
+        android:layout_width="100dp"
+        android:layout_height="100dp" />
+
+    </FrameLayout>
+</LinearLayout>
