--- a/app/src/main/res/layout/item_history_cus.xml
+++ b/app/src/main/res/layout/item_history_cus.xml
@@ -93,4 +93,14 @@
             android:layout_height="wrap_content" />
     </LinearLayout>
 
+    <ImageView
+        android:visibility="gone"
+        android:id="@+id/im_alarm"
+        android:layout_marginRight="35dp"
+        android:layout_marginBottom="8dp"
+        android:layout_gravity="end|bottom"
+        android:src="@drawable/alarm"
+        android:layout_width="36dp"
+        android:layout_height="36dp" />
+
 </LinearLayout>
