--- a/app/src/main/res/layout/activity_info_account.xml
+++ b/app/src/main/res/layout/activity_info_account.xml
@@ -244,7 +244,7 @@
 
         <LinearLayout
             android:id="@+id/v_partner"
-            android:visibility="visible"
+            android:visibility="gone"
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
