--- a/app/src/main/res/layout/view_detail_order.xml
+++ b/app/src/main/res/layout/view_detail_order.xml
@@ -9,6 +9,9 @@
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
+
+
+
        <LinearLayout
            android:padding="8dp"
            android:gravity="center_vertical"
@@ -250,6 +253,37 @@
            android:text="@string/information_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
+
+       <View
+           android:layout_marginBottom="8dp"
+           android:background="@color/grey"
+           android:layout_width="match_parent"
+           android:layout_height="0.5dp"/>
+
+       <LinearLayout
+           android:weightSum="1"
+           android:layout_marginBottom="8dp"
+           android:layout_marginRight="8dp"
+           android:layout_marginLeft="8dp"
+           android:layout_width="match_parent"
+           android:layout_height="wrap_content">
+
+           <TextView
+               android:layout_weight="0.3"
+               android:textColor="@color/black"
+               android:textSize="14sp"
+               android:text="@string/date"
+               android:layout_width="0dp"
+               android:layout_height="wrap_content" />
+
+           <TextView
+               android:id="@+id/tv_date"
+               android:layout_weight="0.7"
+               android:text="0365214523"
+               android:textSize="14sp"
+               android:layout_width="0dp"
+               android:layout_height="wrap_content" />
+       </LinearLayout>
 
        <View
            android:layout_marginBottom="8dp"
