--- a/app/src/main/res/layout/item_order_part.xml
+++ b/app/src/main/res/layout/item_order_part.xml
@@ -97,6 +97,7 @@
         android:layout_height="100dp" />
 
         <ImageView
+            android:visibility="gone"
             android:id="@+id/im_alarm"
             android:layout_marginRight="35dp"
             android:layout_marginBottom="8dp"
