--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -6,12 +6,12 @@
     android:background="@drawable/bg_header">
 
     <LinearLayout
+        android:layout_marginTop="24dp"
         android:id="@+id/btn_singOut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <ImageView
-            android:layout_marginTop="24dp"
             android:layout_marginRight="8dp"
             android:layout_marginLeft="16dp"
             android:src="@drawable/logoutpart"
@@ -21,7 +21,7 @@
         <TextView
             android:layout_gravity="center"
             android:textSize="18sp"
-            android:text="@string/sign_out"
+            android:text="@string/exit"
             android:fontFamily="sans-serif-medium"
             android:textColor="@color/white"
             android:layout_width="wrap_content"
