set order partner

--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -53,6 +53,7 @@
                 android:textSize="22sp"
                 android:layout_weight="1"
                 android:layout_gravity="center"
+                android:paddingRight="50dp"
                 android:textColor="@color/white"
                 android:gravity="center"
                 android:fontFamily="sans-serif-medium"
