--- a/app/src/main/res/layout/item_branch_cus.xml
+++ b/app/src/main/res/layout/item_branch_cus.xml
@@ -32,4 +32,8 @@
 
     </LinearLayout>
 
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
