--- a/app/src/main/res/layout/item_branch_cus.xml
+++ b/app/src/main/res/layout/item_branch_cus.xml
@@ -14,23 +14,30 @@
         android:layout_width="100dp"
         android:layout_height="100dp" />
 
-    <LinearLayout
+    <FrameLayout
         android:layout_gravity="center"
         android:orientation="vertical"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
         <TextView
+            android:layout_marginTop="16dp"
             android:layout_marginLeft="8dp"
-            android:layout_gravity="center"
             android:id="@+id/tv_address"
             android:textSize="14sp"
             android:text="30hsk shdhad shgdajhd sdhagdja hgdjs ha hga jsd "
             android:textColor="@color/black"
             android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp" />
+
+        <ImageView
+            android:src=""
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-    </LinearLayout>
+    </FrameLayout>
 
     <ImageView
         android:layout_width="wrap_content"
