--- a/app/src/main/res/layout/item_branch_cus.xml
+++ b/app/src/main/res/layout/item_branch_cus.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    android:layout_marginLeft="4dp"
-    android:layout_marginRight="4dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginBottom="4dp"
+    android:layout_marginLeft="8dp"
+    android:layout_marginRight="8dp"
     android:orientation="horizontal"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
@@ -15,6 +17,7 @@
         android:layout_height="100dp" />
 
     <FrameLayout
+        android:layout_weight="1"
         android:layout_gravity="center"
         android:orientation="vertical"
         android:layout_width="wrap_content"
@@ -32,15 +35,36 @@
             android:layout_marginStart="8dp" />
 
         <ImageView
-            android:src=""
+            android:visibility="gone"
+            android:id="@+id/im_close"
+            android:src="@drawable/close"
             android:layout_gravity="center"
+            android:layout_width="64dp"
+            android:layout_height="64dp" />
+
+        <LinearLayout
+            android:layout_marginRight="16dp"
+            android:layout_gravity="bottom|end"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:visibility="gone"
+                android:id="@+id/btn_open"
+                android:src="@drawable/open"
+                android:layout_width="24dp"
+                android:layout_height="24dp" />
+
+            <ImageView
+                android:visibility="gone"
+                android:id="@+id/btn_close"
+                android:layout_marginLeft="16dp"
+                android:src="@drawable/close_red"
+                android:layout_width="24dp"
+                android:layout_height="24dp" />
+
+        </LinearLayout>
 
     </FrameLayout>
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
 </LinearLayout>
